# AI-mental-health-coach

./: .dockerignore  .gitignore  .nixpacks.json  .railwayignore  DEPLOYMENT.md  DEPLOYMENT_FULL_STACK.md  Dockerfile  Procfile  README.md  build.sh  docker-compose.yml  env.example  instructions.md  mental_health_coach.db  nixpacks.toml  package-lock.json  package.json  prd.md  pyproject.toml  railway.json  requirements.txt  start_for_mobile.sh  test.db  tsconfig.json  turbo.json
.next/: trace
Frontend/.next/: trace
Frontend/mindful-app/: env.example  jest.config.js  jest.setup.js  package-lock.json  package.json  railway.json  tailwind.config.js  tsconfig.json
Frontend/mindful-app/__mocks__/: fileMock.js
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/src/: index.ts  (+1 more)
apps/web/: next.config.mjs  package.json  tailwind.config.js
compliance/: README.md
docs/: ARCHITECTURE.md  database.md
examples/: voice_client.py
scripts/: health_check.py  start_dev.sh
src/mental_health_coach/: __init__.py  app.py  database.py  main.py  reset_test_user.py  test_frontend.py  test_full_conversation.py  test_integration.py  test_message_debug.py  test_openai.py
tests/: conftest.py
tests/api/: test_auth.py  test_conversations.py  test_phase3.py  test_phase4.py  test_users.py
tests/models/: test_conversation.py  test_homework.py  test_user.py
tests/services/: test_assessment_service.py  test_conversation_memory.py  test_crisis_detection.py  test_dashboard.py  test_emergency_contact.py  test_llm_service.py
tests/voice/: __init__.py  test_audio_io.py  test_conversation_manager.py  test_speech_to_text.py  test_text_to_speech.py
(+98 files in other folders)
